# h12_ros2_controller

./: .gitignore  README.md  environment.yml  package.xml  requirements.txt  setup.cfg  setup.py
assets/h1_2/: h1_2.urdf  h1_2_ros.urdf  h1_2_sphere.urdf
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/action/: DualArm.action
h12_ros2_controller/: channel_interface.py  controller.py  dual_arm_client.py  dual_arm_server.py  joint_state_publisher.py  move_dual_arm_server.py  robot_model.py
h12_ros2_controller/core/: arm_controller.py  channel_interface.py  controller.py  hand_controller.py  robot_model.py
h12_ros2_controller/example/: arm_controller_goto.py  arm_controller_gui.py  gravity_compensation.py  hand_controller_gui.py  lock_and_goto.py  positional_controller.py  robot_viewer.py
h12_ros2_controller/utility/: exclude_pair.py  exclude_pair_sphere.py  inspect_h1_2.py  inspect_velocity.py  joint_definition.py  path_definition.py  view_urdf.py
launch/: desktop_launch.py  full_launch.py  robot_launch.py
rviz/: default.rviz
